# SolarEvent

./: .gitignore  README.md  events_data.csv  package-lock.json  package.json  pyproject.toml  rollup.config.ts  tsconfig.json
myproject/: settings.py  urls.py
pages/: admin.py  models.py  tests.py  urls.py  views.py
pages/management/commands/: get_revisions.py  load_events.py
pages/migrations/: 0001_initial.py  0002_alter_revision_revision_id.py
pages/static/js/: graph.js
pages/static/pages/random_number/: initialize.ts  random_number.ts
pages/templates/pages/: graph.html  home.html  random_number.html
tests/: test_pytest.py  test_random_number.test.ts
